# wx-accessible-menubar

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: native_demo.py  webview_demo.py
src/wx_accessible_menubar/: __init__.py  menubar.py
