[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "wx-accessible-menubar"
version = "0.1.1"
description = "Keyboard-accessible native menu bars for wxPython (plain Alt, mnemonics, F10, arrow navigation, focus restoration) that work even when a WebView2 holds focus, read correctly in NVDA and JAWS."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Taylor Arndt", email = "taylor@techopolisonline.com" },
  { name = "Community Access" },
]
maintainers = [
  { name = "Taylor Arndt", email = "taylor@techopolisonline.com" },
]
keywords = [
  "wxpython", "wxwidgets", "menubar", "menu", "webview", "webview2",
  "accessibility", "a11y", "screen-reader", "nvda", "jaws", "keyboard",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Adaptive Technologies",
  "Topic :: Software Development :: User Interfaces",
  "Intended Audience :: Developers",
]
dependencies = [
  "wxPython>=4.2.0",
]

[project.urls]
Homepage = "https://github.com/Community-Access/wx-accessible-menubar"

[tool.hatch.build.targets.wheel]
packages = ["src/wx_accessible_menubar"]

[tool.ruff]
line-length = 100
target-version = "py310"
